# My_AI_Agent

./: .gitignore  Agent_Dockerfile  agent.py  categorization_memory.json  constants.py  main.py  pyproject.toml  unhandled_filedata.json  watchdog.py
AI_Agent/: Agent.py  Main.py
Tools/: FileAnalyzer.py  Gmail_Downloader.py  downloaded_attachments.json
Utils/: openAI_tools.py  startup_checks.py
analysis/: 034687c9c31abac9e5b06ba812365597bd80a878dc8a4f9acf83b6e9647259f2_1094691318-013.analysis.json  0dc7d3d0e2df3a6e4fa0314be8024b4e8408ec175fb02d7e5e19bfd7524b6206_image006.analysis.json  142cc6598cb58a7b4a07d20b75170c175fd410e3411b3bf6128c74e5b434ee44_image008.analysis.json  14c82c5b9e2c929f80c72957ed7c6e66b7d355be985eba54866d1fc615976100_content-1201139725.analysis.json  212f08b3542ff221fe421037e5d298f569b3070f641e2ace8f787bdf443e06d9_content-1201164195.analysis.json  21f65bdf6c1b0eceac510b586b8fecb6111ffdc15137dfc57ad6061e97de5071_7oRC5MiQPPJZ8E2oCDt5Zg.analysis.json  319c133644dc6b41f5537aed796d26906dd18d0b6406f5f35a2bfbdb249624f5_schmeetting.analysis.json  39d02ce3078499f57775b4889ea073e6b81101fef96f3b46b975cfdb7d24c8f7_1094691441-013.analysis.json  3e6d4972a707dd0d50dc8fc266c9c33f418f88de2a4eca26dfa50417e1d0a0f1_image001.analysis.json  46548343aa1dec59714c8a6a6ba0d9e7e8abceef7a476f93ee7beb08b82402e9_mn3oxq28W4kvtzEGjpBfCp.analysis.json  4cd1427ed38ed3e6a76c98f1c016b2cadb7d80aae00d3da12d0176cc40900003_content-1201247407.analysis.json  4d2757c5dc3c5f6a6c5a3b1b91701e527dee7abbfc1c8c83eeb42fcabd31272c_g7fFdcJ6ppkidJdawHTp6m.analysis.json  (+19 more)
tools/: file_analyzer.py  (+10 more)
(+6 files in other folders)
