[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
    "loguru>=0.7.3",
    "openai>=1.78.0",
    "pandas>=2.2.3",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
    "statsmodels>=0.14.4",
]
